tests/templates/onpremises/00-disabled/baseline/manifests/tracing/resources/ingress-infra.yml
# Copyright (c) 2017-present SIGHUP s.r.l All rights reserved.
# Use of this source code is governed by a BSD-style
# license that can be found in the LICENSE file.

---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  labels:
    cluster.kfd.sighup.io/useful-link.enable: "true"
  annotations:
    cluster.kfd.sighup.io/useful-link.url: https://minio-tracing.internal.example.com
    cluster.kfd.sighup.io/useful-link.name: "MinIO Tracing"
    forecastle.stakater.com/expose: "true"
    forecastle.stakater.com/appName: "MinIO Tracing"
    
    forecastle.stakater.com/icon: "https://min.io/resources/img/logo/MINIO_Bird.png"
    
    cert-manager.io/cluster-issuer: letsencrypt-fury
    

  
  name: minio
  namespace: tracing
  
spec:
  ingressClassName: 
  rules:
    - host: minio-tracing.internal.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
            
              service:
                name: minio-tracing-console
                port:
                  name: http
            
  tls:
    - hosts:
      - minio-tracing.internal.example.com
      secretName: minio-tracing-tls
